# age-prediction

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
age-prediction/: __main__.py  temp_tester.py
age-prediction/api/: poisson_model.py  prediction.py
age-prediction/modelling/: model.py
age-prediction/preprocessing/: __init__.py  loading.py  processing.py
config/: main.yaml
src/: __main__.py  temp_tester.py
src/api/: prediction.py
src/common_utils/: __init__.py  connection.py  misc.py
src/modelling/: model.py
src/preprocessing/: __init__.py  generators.py  loading.py  processing.py
